--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,4 +1,4 @@
-@import url("https://fonts.googleapis.com/css2?family=MuseoModerno:wght@400;500;600;700&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=MuseoModerno:wght@300;400;500;600;700&display=swap");
 @import "../node_modules/swiper/css/swiper.css";
 @import "../node_modules/swiper/css/swiper.min.css";
 @import "../node_modules/font-awesome/css/font-awesome.css";
@@ -251,10 +251,6 @@ textarea {
   width: 100vw;
   padding: 1rem 2rem;
 }
-.swiper-container .products-slider-container {
-  padding: 1rem 0;
-  width: 100vw;
-}
 
 .slider-container-title {
   border-bottom: 2px solid #1890ff;
@@ -282,7 +278,7 @@ textarea {
   align-items: center;
   justify-content: space-between;
   width: 9rem;
-  border: 1px solid #f0c040;
+  border: 1px solid #aaaaaa;
   font-family: monospace;
 }
 
@@ -301,7 +297,6 @@ textarea {
   border-radius: 0.5rem;
   flex: 0 1 0; /* 0:flex grow 1:flex shrink 34: flex width*/
   padding: 0;
-  list-style-type: none;
   margin: 0.5rem 0.3rem;
   padding-bottom: 2rem;
   border: 1px solid #eeeeee;
@@ -935,6 +930,10 @@ select {
   border-radius: 0.5rem;
   padding: 0.8rem;
   border: 0.1rem #c0c0c0 solid;
+}
+
+.collection-product-form {
+  font-weight: 400;
 }
 
 /*select:focus option:last-of-type:checked {
@@ -3968,17 +3967,16 @@ button[disabled]:hover {
 
 .navigation-bar-container {
   height: 5rem;
-  width: 100%;
+  width: 95%;
   border-radius: 0 0 0.5rem 0.5rem;
   box-shadow: 0px 0px 10px 3px #92929252;
   clip-path: inset(0px -50px -50px -50px);
   position: sticky;
   top: 0;
   z-index: 99;
-  background-color: white;
+  background-color: #fff;
   display: flex;
   align-items: center;
-  padding: 0 2rem;
 }
 
 .navigation-height {
@@ -3986,7 +3984,6 @@ button[disabled]:hover {
 }
 
 .animateNavBar {
-  transition: all 0.2s ease-in-out;
   animation-name: animateNavBar;
   animation-duration: 0.7s;
   animation-fill-mode: forwards;
@@ -3994,7 +3991,7 @@ button[disabled]:hover {
 
 @keyframes animateNavBar {
   0% {
-    transform: translateY(-200%);
+    transform: translateY(-100%);
   }
   100% {
     transform: translateY(0);
@@ -4030,7 +4027,7 @@ button[disabled]:hover {
 
 .nav-category-border {
   height: 3rem;
-  border-right: 1px solid #909090;
+  border-right: 1px solid #dbdbdb;
 }
 
 .nav-search-container {
@@ -4041,14 +4038,53 @@ button[disabled]:hover {
 
 .nav-headers {
   width: 60%;
+  padding: 0 1rem;
+  height: inherit;
+}
+
+.nav-headers-container {
+  display: flex;
+  align-items: center;
+  width: fit-content;
+}
+
+.nav-header {
+  padding: 1.5rem 1.5rem;
+  color: #404040;
+  cursor: pointer;
+  position: relative;
+}
+
+.header-border-bottom {
+  width: inherit;
+  position: absolute;
+  bottom: 0;
+  position: absolute;
+  height: 2px;
+  width: 0;
+  background-color: #ff8000;
+  border-radius: 5rem;
+  transition: width 0.3s;
+}
+
+.left {
+  left: 0;
+}
+
+.right {
+  right: 0;
+}
+
+.animate-border-bottom {
+  width: 100%;
 }
 
 .nav-search-bar {
   display: flex;
   align-items: center;
   height: 3.5rem;
-  width: 95%;
-  border: 1px solid #c0c0c0;
+  width: 30rem;
+  border: 1px solid #e0e0e0;
   border-radius: 2rem;
   position: relative;
 }
@@ -4065,10 +4101,11 @@ button[disabled]:hover {
   border: 0;
   background-color: #ffffff00;
   padding: 0;
+  color: 505050;
 }
 
 .nav-search-text::placeholder {
-  color: #666666;
+  color: #777777;
 }
 
 .nav-search-close-icon {
@@ -4080,11 +4117,265 @@ button[disabled]:hover {
 
 .nav-search-help {
   position: absolute;
-  top: 0;
-  left: 0;
-  background-color: #50505034;
-  width: 100%;
-  height: 20vh;
+  top: -0.1rem;
+  left: -0.1rem;
+  background-color: #ffffff;
+  width: 101%;
+  height: 8rem;
   z-index: 100;
-  border-radius: 1.5rem 1.5rem 0 0;
+  border-radius: 1.5rem;
+  box-shadow: 0px 0px 10px 3px #92929252;
+}
+
+.nav-search-bar-container {
+  display: flex;
+  align-items: center;
+  height: 3.5rem;
+}
+
+.nav-search-help {
+  display: flex;
+  flex-direction: column;
+}
+
+.search-bar-border-bottom {
+  border-top: 1px solid #e0e0e0;
+  margin: 0 1rem;
+}
+
+.animate-search-container {
+  animation-name: animateSearchCont;
+  animation-duration: 0.4s;
+  animation-fill-mode: forwards;
+}
+
+@keyframes animateSearchCont {
+  0% {
+    transform: scale(0);
+  }
+  50% {
+    transform: scale(1.05);
+  }
+  100% {
+    transform: scale(1);
+  }
+}
+
+.nav-search-help-words {
+  display: flex;
+  align-items: center;
+  text-align: start;
+}
+
+.nav-search-help-word {
+  font-size: 1.1rem;
+  padding: 0rem 0.5rem;
+  background-color: #eeeeee;
+  border-radius: 1rem;
+  margin: 0 0.3rem;
+  cursor: pointer;
+}
+
+.search-bar-help-title {
+  color: #5d5d5d;
+  font-size: 1.2rem;
+  margin: 0.4rem 0;
+  margin-top: 0.1rem;
+  padding: 0 0.2rem;
+}
+
+.search-bar-help-cont {
+  padding: 0.1rem 2rem;
+  display: flex;
+  align-items: center;
+  height: 4.5rem;
+  flex-wrap: wrap;
+}
+
+/* Product Ribbon */
+
+.product-ribbon-overlay {
+  display: flex;
+  justify-content: center;
+  padding: 1rem 0;
+}
+
+.product-ribbon-container {
+  height: 11rem;
+  width: 94vw;
+  border-radius: 0.1rem;
+  display: flex;
+  align-items: center;
+  padding: 1.5rem 0;
+  position: relative;
+  box-shadow: 0px 0px 10px 1px #92929252;
+  clip-path: inset(0px -50px -50px -50px);
+  border-radius: 0 0 0.5rem 0.5rem;
+}
+
+.product-ribbon-title {
+  font-size: 1.8rem;
+  font-weight: 600;
+  padding: 0 3rem;
+  cursor: pointer;
+  width: 25rem;
+  z-index: 10;
+  height: inherit;
+  display: flex;
+  align-items: center;
+  background-color: inherit;
+  border-radius: 2rem;
+}
+
+.fish-title-border {
+  width: 100%;
+  position: absolute;
+  top: 0;
+  border-top: 2px solid #d3b25d;
+}
+
+.fish-title-cont {
+  position: absolute;
+  top: 0;
+  left: 10rem;
+  z-index: 10;
+  display: flex;
+  justify-content: center;
+  color: rgba(255, 255, 255, 0);
+  overflow: hidden;
+}
+
+.fish-title {
+  background-color: #d3b25d;
+  text-align: center;
+  color: #fff;
+  padding: 0.3rem 1.5rem;
+  border-radius: 0 0 1.7rem 1.7rem;
+  font-weight: 500;
+  font-size: 1.5rem;
+}
+
+.fish-title-left-border {
+  width: 4rem;
+  border-top-right-radius: 1.8rem;
+  box-shadow: 1.5rem -1.4rem 0 0 #d3b25d;
+}
+
+.fish-title-right-border {
+  width: 4rem;
+  border-top-left-radius: 1.8rem;
+  box-shadow: -1.5rem -1.4rem 0 0 #d3b25d;
+}
+
+.product-swiper-container {
+  max-width: 94vw;
+  min-width: 94vw;
+  border-radius: 1rem;
+  padding: 1rem;
+  font-size: 1.1rem;
+}
+
+.product-ribbon-image-container {
+  min-height: 8rem;
+  max-height: 8rem;
+  max-width: 10rem;
+  min-width: 10rem;
+  background-color: #fff;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border: 1px solid #eeeeee;
+  border-radius: 0.5rem;
+  margin: 0 0.2rem;
+}
+
+.product-ribbon-image-container img {
+  max-height: 6.5rem;
+  max-width: 9rem;
+  transition: all 0.2s ease-in-out;
+}
+
+.product-ribbon-image-container:last-of-type {
+  border-radius: 0.5rem 2rem 2rem 0.5rem;
+}
+
+.product-ribbon-image-container:first-of-type {
+  border-radius: 2rem 0.5rem 0.5rem 2rem;
+}
+
+.product-ribbon-image-container:hover img {
+  transform: scale(1.1, 1.1);
+}
+
+@media screen and (max-width: 700px) {
+  .product-ribbon-overlay {
+    padding: 0;
+  }
+
+  .product-ribbon-container {
+    width: 100vw;
+    padding: 0;
+    box-shadow: 0;
+    height: 9rem;
+    border-radius: 0;
+    padding-bottom: 1rem;
+  }
+
+  .product-swiper-container {
+    max-width: 100vw;
+    min-width: 100vw;
+    padding: 0;
+    margin: 0;
+    border-radius: 0;
+  }
+
+  .product-ribbon-image-container:last-of-type {
+    border-radius: 0.3rem;
+    margin-right: 0.4rem;
+  }
+
+  .product-ribbon-image-container:first-of-type {
+    border-radius: 0.3rem;
+    margin-left: 0.4rem;
+  }
+
+  .product-ribbon-image-container {
+    min-height: 7rem;
+    max-height: 7rem;
+    max-width: 8rem;
+    min-width: 8rem;
+    border-radius: 0.3rem;
+  }
+
+  .product-ribbon-image-container img {
+    max-height: 6rem;
+    max-width: 7rem;
+  }
+
+  .fish-title-cont {
+    position: absolute;
+    top: 0;
+    width: 17rem;
+    left: calc((100vw - 17rem) / 2);
+    overflow: visible;
+    margin: 0;
+  }
+
+  .fish-title {
+    padding: 0.1rem 0.8rem;
+    border-radius: 0 0 1.2rem 1.2rem;
+    font-size: 1.2rem;
+  }
+
+  .fish-title-left-border {
+    width: 2rem;
+    border-top-right-radius: 1.2rem;
+    box-shadow: 1rem -1rem 0 0 #d3b25d;
+  }
+
+  .fish-title-right-border {
+    width: 2rem;
+    border-top-left-radius: 1.2rem;
+    box-shadow: -1rem -1rem 0 0 #d3b25d;
+  }
 }
