--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -17,6 +17,7 @@
   box-sizing: border-box;
   font-family: "MuseoModerno", cursive;
   /*font-family: "Baloo Chettan 2", cursive;*/
+  font-weight: 400;
 }
 
 html {
@@ -245,31 +246,47 @@ textarea {
 }
 
 /* Products */
+.products-slider-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 0.5rem 0;
+}
+
+.products-slider-container:first-of-type {
+  padding-top: 1rem;
+}
+
 .products {
-  margin-top: 1rem;
   padding: 0;
-  width: 100vw;
-  padding: 1rem 2rem;
+  width: 94vw;
+  padding: 1.5rem 2rem;
+  border-radius: 0 0 0.5rem 0.5rem;
+  background-color: #f9f9f9;
+  /*box-shadow: 0px 0px 10px 1px #92929252;*/
+  /*clip-path: inset(0px -50px -50px -50px);*/
+  margin: 0;
+  /*border-top: 2px solid #d3b25d;*/
 }
 
 .slider-container-title {
-  border-bottom: 2px solid #1890ff;
-  padding: 0.5rem 0 0.2rem 0;
+  padding: 0 1rem;
+  border-bottom: 2px solid #d3b25d;
 }
 
 .slider-container-title-line {
-  margin: 0 2rem;
   font-size: 1.6rem;
   display: flex;
+  width: 94vw;
   position: relative;
-  padding: 0 4rem;
+  padding-left: 1rem;
 }
 
 .slider-container-show-all {
   font-size: 1.3rem;
   position: absolute;
-  right: 4rem;
-  top: 1rem;
+  right: 1rem;
+  top: 0rem;
   color: #aaaaaa;
   cursor: pointer;
   padding: 0.3rem 0.8rem;
@@ -278,15 +295,14 @@ textarea {
   align-items: center;
   justify-content: space-between;
   width: 9rem;
-  border: 1px solid #aaaaaa;
   font-family: monospace;
 }
 
 .slider-container-show-all:hover {
-  color: #1890ff;
+  color: #d3b25d;
 }
 .faChevronRight {
-  color: #1890ff;
+  color: #d3b25d;
 }
 
 .product {
@@ -299,42 +315,46 @@ textarea {
   padding: 0;
   margin: 0.5rem 0.3rem;
   padding-bottom: 2rem;
-  border: 1px solid #eeeeee;
+  background-color: #fff;
+  position: relative;
 }
 
 @media screen and (max-width: 700px) {
   .products {
-    padding: 0;
-  }
-
-  .products-slider-container {
-    border-left: 0;
-    border-right: 0;
-    padding: 0;
-    padding-bottom: 1rem;
-    margin: 1rem 0;
+    padding: 0.7rem 0;
+    width: 100vw;
+    border: 0;
   }
 
   .slider-container-title-line {
-    margin: 0;
-    padding: 0 1rem;
     font-size: 1.3rem;
+    padding: 0;
+    width: 95vw;
+  }
+
+  .slider-container-title {
+    padding: 0 0.5rem;
+    border-bottom: 2px solid #d3b25d;
   }
 
   .slider-container-show-all {
     font-size: 1.05rem;
-    right: 0.5rem;
+    right: 0;
     width: 8rem;
-    top: 0.35rem;
+    top: 0rem;
+    /*border: 1px solid #d3b25d;*/
   }
 
   .product {
-    border: 1px solid #f0f0f0;
     margin: 0.2rem;
   }
 
   .product:first-child {
     margin-left: 0.4rem;
+  }
+
+  .product:last-child {
+    margin-right: 0.4rem;
   }
 }
 
@@ -360,10 +380,13 @@ textarea {
   border-radius: 0 0.5rem 0.5rem 0;
   z-index: 10;
   font-size: 2rem;
-  font-weight: 600;
   line-height: 100%;
   display: flex;
   justify-content: center;
+}
+
+.product-discount > div {
+  font-weight: 500;
 }
 
 .product-image {
@@ -700,7 +723,7 @@ textarea {
 }
 
 .cart-list {
-  flex: 3 1 60rem;
+  flex: 3 1 auto;
 }
 
 .cart-action {
@@ -734,36 +757,50 @@ textarea {
 .cart-list-container li:first-child {
   display: flex;
   align-items: center;
-  height: 3rem;
+  height: 2rem;
   padding-left: 1rem;
+}
+
+.cart-list-container h4 {
+  font-weight: 400;
 }
 
 .cart-list-container li:last-child {
   border-bottom: 0;
 }
 
-.cart-list-container img {
-  max-width: 10rem;
-  max-height: 10rem;
-}
-
 .cart-image {
   flex: 1 1;
   margin: 1rem;
-  min-width: 10rem;
-  min-height: 10rem;
+  width: 12rem;
+  height: 10rem;
   align-items: center;
   display: flex;
+  justify-content: center;
+}
+
+.cart-image img {
+  max-width: 100%;
+  max-height: 90%;
 }
 
 .cart-name {
-  flex: 8 1;
+  flex: 7 1;
+}
+
+@media screen and (max-width: 700px) {
+  .cart-name {
+    flex: 2 1;
+  }
+}
+
+.item-name {
+  font-size: 1.2rem;
 }
 
 .cart-price {
-  flex: 1 1;
-  font-size: 2.5rem;
-  text-align: right;
+  display: flex;
+  align-items: flex-end;
 }
 
 .cart-list-items {
@@ -782,6 +819,12 @@ textarea {
 
 .custom-select {
   padding: 0.2rem;
+}
+
+.cart-discount {
+  width: 3.8rem;
+  font-size: 1.4rem;
+  padding: 0.5rem;
 }
 
 /* control panel */
@@ -853,6 +896,7 @@ textarea {
 
 .control-title {
   margin: 0.5rem 1rem 0.5rem 1rem;
+  font-weight: 400;
 }
 
 .control-page-header {
@@ -2069,10 +2113,12 @@ input.checked[type="radio"] {
 
 .properties-table {
   padding: 1rem;
+  margin: 1rem 0;
 }
 
 .properties-table td {
   width: 12rem;
+  font-size: 1.3rem;
 }
 
 .properties-table th {
@@ -2240,7 +2286,28 @@ input.checked[type="radio"] {
   display: inline-flex;
   cursor: pointer;
 }
+@media screen and (max-width: 700px) {
+  .chat-btn {
+    z-index: 12;
+    color: white;
+    position: fixed;
+    top: 52vh;
+    box-shadow: 0 0 11px rgba(33, 33, 33, 0.2);
+    width: 5.5rem;
+    height: 4.5rem;
+    border-radius: 0.5rem 0 0 0.5rem;
+    right: 0;
+    margin: 0;
+    touch-action: none;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
 
+  .fa-comments {
+    padding: 0.2rem;
+  }
+}
 .fa-comments {
   color: white;
 }
@@ -3547,30 +3614,6 @@ button[disabled]:hover {
   cursor: pointer;
 }
 
-/*@media screen and (max-width: 700px) {
-  .add-to-cart-btn {
-    font-size: 1.4rem;
-  }
-}*/
-
-/*.total-amount-notification {
-  position: fixed;
-  display: flex;
-  justify-content: center;
-  flex-direction: column;
-  align-items: center;
-  text-align: center;
-  top: 0.4rem;
-  border-radius: 2rem;
-  padding: 0.6rem;
-  background-color: #f0c040;
-  color: #000000;
-  z-index: 10;
-  left: calc((100vw - 20rem) / 2);
-  width: 20rem;
-  box-shadow: 0 0 4px rgba(33, 33, 33, 0.431);
-}*/
-
 .product-plus {
   cursor: pointer;
   position: absolute;
@@ -3587,48 +3630,36 @@ button[disabled]:hover {
   cursor: pointer;
   position: absolute;
   right: 0.3rem;
-  top: 0.3rem;
   padding: 0.5rem 1.1rem 0.4rem 1.1rem;
   background-color: #f0c140ea;
   color: white;
   border-radius: 0.5rem;
   z-index: 1;
+  transition: transform 0.2s ease-in-out;
+  will-change: transform;
 }
 
 .product-new-qty {
   cursor: pointer;
   position: absolute;
   right: 0.3rem;
-  top: 3.8rem;
   width: 3.2rem;
   height: 3.4rem;
   display: flex;
   justify-content: center;
   align-items: center;
   z-index: 1;
+  transition: transform 0.1s ease-in-out;
+  will-change: transform;
 }
 
-@media screen and (max-width: 700px) {
-  .chat-btn {
-    z-index: 12;
-    color: white;
-    position: fixed;
-    top: 52vh;
-    box-shadow: 0 0 11px rgba(33, 33, 33, 0.2);
-    width: 5.5rem;
-    height: 4.5rem;
-    border-radius: 0.5rem 0 0 0.5rem;
-    right: 0;
-    margin: 0;
-    touch-action: none;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-  }
-
-  .fa-comments {
-    padding: 0.2rem;
-  }
+.right-qty-btn-transform {
+  top: 3.8rem;
+  transform: translateY(-3.6rem);
+}
+.right-minus-btn-transform {
+  top: 7.3rem;
+  transform: translateY(-7rem);
 }
 
 @media screen and (min-width: 700px) {
@@ -3636,117 +3667,25 @@ button[disabled]:hover {
     padding: 1rem 1.7rem;
   }
   .product-minus {
-    /*top: 9.2rem;*/
     padding: 1rem 1.7rem;
   }
   .product-new-qty {
-    /*top: 4.6rem;*/
     width: 4.5rem;
     height: 4.5rem;
     font-size: 1.7rem;
   }
-}
-
-@keyframes h-qty {
-  from {
+  .right-qty-btn-transform {
     top: 4.6rem;
+    transform: translateY(-4.3rem);
   }
-  to {
-    top: 0.3rem;
-  }
-}
-
-@keyframes h-minus {
-  from {
+  .right-minus-btn-transform {
     top: 9.2rem;
-  }
-  to {
-    top: 0.3rem;
+    transform: translateY(-8.9rem);
   }
 }
 
-.hide-qty {
-  animation-name: h-qty;
-  animation-duration: 0.1s;
-  animation-fill-mode: forwards;
-  z-index: 1;
-}
-
-.hide-minus {
-  animation-name: h-minus;
-  animation-duration: 0.2s;
-  animation-fill-mode: forwards;
-  z-index: 1;
-}
-
-@keyframes ef-qty {
-  from {
-    top: 0.3rem;
-  }
-  to {
-    top: 4.6rem;
-  }
-}
-
-@keyframes ef-minus {
-  from {
-    top: 0.3rem;
-  }
-  to {
-    top: 9.2rem;
-  }
-}
-
-.animate-qty {
-  animation-name: ef-qty;
-  animation-duration: 0.1s;
-  animation-fill-mode: forwards;
-}
-
-.animate-minus {
-  animation-name: ef-minus;
-  animation-duration: 0.2s;
-  animation-fill-mode: forwards;
-}
-
-@media screen and (max-width: 700px) {
-  @keyframes ef-qty {
-    from {
-      top: 0.3rem;
-    }
-    to {
-      top: 3.8rem;
-    }
-  }
-
-  @keyframes ef-minus {
-    from {
-      top: 0.3rem;
-    }
-    to {
-      top: 7.3rem;
-    }
-  }
-}
-
-@media screen and (max-width: 700px) {
-  @keyframes h-qty {
-    from {
-      top: 3.8rem;
-    }
-    to {
-      top: 0.3rem;
-    }
-  }
-
-  @keyframes h-minus {
-    from {
-      top: 7.3rem;
-    }
-    to {
-      top: 0.3rem;
-    }
-  }
+.animate {
+  transform: none;
 }
 
 .product-image {
@@ -3957,6 +3896,7 @@ button[disabled]:hover {
 }
 
 /* Navigation Bar */
+
 .navigation-bar {
   width: 100vw;
   height: 100vmax;
@@ -3977,6 +3917,8 @@ button[disabled]:hover {
   background-color: #fff;
   display: flex;
   align-items: center;
+  transition: transform 0.7s ease-in-out;
+  will-change: transform;
 }
 
 .navigation-height {
@@ -4192,6 +4134,102 @@ button[disabled]:hover {
   flex-wrap: wrap;
 }
 
+@media screen and (max-width: 700px) {
+  .navigation-bar {
+    position: relative;
+    width: auto;
+    height: auto;
+    background-color: lawngreen;
+  }
+
+  .navigation-bar-container {
+    height: auto;
+    width: 100vw;
+    position: absolute;
+    top: 0;
+    z-index: 99;
+    display: flex;
+    align-items: center;
+    border-radius: 0;
+    flex-direction: row-reverse;
+    box-shadow: none;
+    background-color: #fff;
+  }
+
+  .nav-headers,
+  .nav-category-border,
+  .nav-category-header {
+    display: none;
+  }
+
+  .nav-category-container {
+    width: 15.5%;
+    border-radius: 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: #fff;
+  }
+
+  .nav-category-icon {
+    padding: 0.6rem 0;
+    text-align: center;
+    margin: 0;
+  }
+
+  .animateNavBar {
+    position: fixed;
+    animation-duration: 0.3s;
+    /*box-shadow: 0px 0px 10px 3px #92929226;*/
+    padding: 0.8rem 0;
+    box-shadow: 0px 0px 10px 3px #92929252;
+  }
+
+  .category-icon {
+    font-size: 2.2rem;
+  }
+
+  .nav-search-container {
+    width: 85%;
+    margin-left: 1rem;
+  }
+
+  .nav-search-bar {
+    height: 4.5rem;
+    width: 100%;
+    border-radius: 0.5rem;
+    background-color: #f0f0f0;
+    border: 0;
+  }
+
+  .nav-search-text {
+    font-size: 1.4rem;
+  }
+
+  .nav-search-help {
+    position: absolute;
+    top: 0rem;
+    left: 0rem;
+    background-color: #ffffff;
+    width: 100%;
+    height: 8rem;
+    z-index: 100;
+    border-radius: 0.5rem;
+    box-shadow: 0px 5px 10px 3px #92929255;
+    clip-path: inset(0px -50px -50px -50px);
+  }
+
+  .nav-search-bar-container {
+    height: 5rem;
+    background-color: #f0f0f0;
+    border-radius: 0.5rem 0.5rem 0 0;
+  }
+
+  .search-bar-border-bottom {
+    margin: 0;
+  }
+}
+
 /* Product Ribbon */
 
 .product-ribbon-overlay {
@@ -4201,21 +4239,18 @@ button[disabled]:hover {
 }
 
 .product-ribbon-container {
-  height: 11rem;
   width: 94vw;
   border-radius: 0.1rem;
-  display: flex;
-  align-items: center;
-  padding: 1.5rem 0;
   position: relative;
-  box-shadow: 0px 0px 10px 1px #92929252;
   clip-path: inset(0px -50px -50px -50px);
   border-radius: 0 0 0.5rem 0.5rem;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 .product-ribbon-title {
   font-size: 1.8rem;
-  font-weight: 600;
   padding: 0 3rem;
   cursor: pointer;
   width: 25rem;
@@ -4231,7 +4266,7 @@ button[disabled]:hover {
   width: 100%;
   position: absolute;
   top: 0;
-  border-top: 2px solid #d3b25d;
+  height: 2px;
 }
 
 .fish-title-cont {
@@ -4246,7 +4281,6 @@ button[disabled]:hover {
 }
 
 .fish-title {
-  background-color: #d3b25d;
   text-align: center;
   color: #fff;
   padding: 0.3rem 1.5rem;
@@ -4258,98 +4292,72 @@ button[disabled]:hover {
 .fish-title-left-border {
   width: 4rem;
   border-top-right-radius: 1.8rem;
-  box-shadow: 1.5rem -1.4rem 0 0 #d3b25d;
+  box-shadow: 1.5rem -1.4rem 0 0;
 }
 
 .fish-title-right-border {
   width: 4rem;
   border-top-left-radius: 1.8rem;
-  box-shadow: -1.5rem -1.4rem 0 0 #d3b25d;
+  box-shadow: -1.5rem -1.4rem 0 0;
 }
 
 .product-swiper-container {
   max-width: 94vw;
   min-width: 94vw;
-  border-radius: 1rem;
   padding: 1rem;
   font-size: 1.1rem;
+  border-radius: 0.2rem;
+  background-color: #f9f9f9;
 }
 
-.product-ribbon-image-container {
-  min-height: 8rem;
-  max-height: 8rem;
-  max-width: 10rem;
-  min-width: 10rem;
+.slide-ribbon-container {
   background-color: #fff;
-  display: flex;
-  align-items: center;
-  justify-content: center;
   border: 1px solid #eeeeee;
   border-radius: 0.5rem;
   margin: 0 0.2rem;
+  position: relative;
+  display: flex;
+  flex-direction: column;
 }
 
-.product-ribbon-image-container img {
-  max-height: 6.5rem;
-  max-width: 9rem;
+.slide-ribbon-container img {
   transition: all 0.2s ease-in-out;
 }
 
-.product-ribbon-image-container:last-of-type {
+.slide-ribbon-container:last-of-type {
   border-radius: 0.5rem 2rem 2rem 0.5rem;
 }
 
-.product-ribbon-image-container:first-of-type {
+.slide-ribbon-container:first-of-type {
   border-radius: 2rem 0.5rem 0.5rem 2rem;
 }
 
-.product-ribbon-image-container:hover img {
+.slide-ribbon-container:hover img {
   transform: scale(1.1, 1.1);
 }
 
 @media screen and (max-width: 700px) {
-  .product-ribbon-overlay {
-    padding: 0;
-  }
-
   .product-ribbon-container {
-    width: 100vw;
-    padding: 0;
-    box-shadow: 0;
-    height: 9rem;
+    box-shadow: none;
     border-radius: 0;
-    padding-bottom: 1rem;
   }
 
   .product-swiper-container {
-    max-width: 100vw;
-    min-width: 100vw;
-    padding: 0;
+    padding: 0.6rem 0.4rem;
     margin: 0;
     border-radius: 0;
   }
 
-  .product-ribbon-image-container:last-of-type {
-    border-radius: 0.3rem;
-    margin-right: 0.4rem;
-  }
-
-  .product-ribbon-image-container:first-of-type {
-    border-radius: 0.3rem;
-    margin-left: 0.4rem;
-  }
-
-  .product-ribbon-image-container {
-    min-height: 7rem;
-    max-height: 7rem;
-    max-width: 8rem;
-    min-width: 8rem;
+  .slide-ribbon-container:last-of-type {
     border-radius: 0.3rem;
   }
 
-  .product-ribbon-image-container img {
-    max-height: 6rem;
-    max-width: 7rem;
+  .slide-ribbon-container:first-of-type {
+    border-radius: 0.3rem;
+  }
+
+  .slide-ribbon-container {
+    border-radius: 0.3rem;
   }
 
   .fish-title-cont {
@@ -4370,12 +4378,95 @@ button[disabled]:hover {
   .fish-title-left-border {
     width: 2rem;
     border-top-right-radius: 1.2rem;
-    box-shadow: 1rem -1rem 0 0 #d3b25d;
+    box-shadow: 1rem -1rem 0 0;
   }
 
   .fish-title-right-border {
     width: 2rem;
     border-top-left-radius: 1.2rem;
-    box-shadow: -1rem -1rem 0 0 #d3b25d;
+    box-shadow: -1rem -1rem 0 0;
   }
 }
+
+/* Product Manager Extenssion */
+
+.onSale-cont {
+  border: 1px solid #c0c0c0;
+  border-radius: 0.5rem;
+  padding: 1rem;
+  margin: 1rem 0;
+}
+
+.onSale-cont > * {
+  width: 100%;
+}
+
+.onSale-cont input,
+.onSale-cont select {
+  margin-bottom: 1rem;
+}
+
+.onSale-cont div {
+  display: flex;
+  align-items: center;
+}
+
+.form-container-manager button {
+  margin: 0.5rem 0;
+}
+
+.mobile-swiper-container {
+  overflow: auto;
+  white-space: nowrap;
+  -webkit-overflow-scrolling: touch;
+  display: flex;
+  align-items: center;
+  scroll-snap-type: x mandatory;
+}
+
+.mobile-swiper-container .product {
+  display: inline-block;
+  text-align: center;
+  scroll-snap-align: end;
+}
+
+.mobile-swiper-container .slide-ribbon-container {
+  display: inline-block;
+  text-align: center;
+}
+
+.mobile-swiper-container::-webkit-scrollbar {
+  display: none;
+}
+
+.product-ribbon-image-container {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+/* Slide Title Styles */
+.product-title-cont-in-ribbon-slide {
+  /*position: absolute;
+  bottom: -0.5rem;*/
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 0 1rem;
+  white-space: nowrap;
+  text-overflow: ellipsis;
+  overflow: hidden;
+}
+
+.product-title-in-ribbon-slide {
+  color: #505050;
+}
+
+.faChevronRight-slide-title {
+  color: #d3b35d;
+  margin-left: 0.3rem;
+}
+
+/*.slide-ribbon-container:hover .faChevronRight-slide-title {
+  margin-left: 0.5rem;
+}*/
