--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -71,6 +71,7 @@ textarea {
   grid-template-rows: 5rem 1fr 5rem;
   min-height: 100vh;
   max-width: 100vw;
+  min-width: 100vw;
   font-size: 1.4rem;
 }
 
@@ -1234,7 +1235,7 @@ input.checked[type="radio"] {
   flex-direction: column;
   align-items: center;
   text-align: center;
-  top: 0.4rem;
+  top: 5.4rem;
   border-radius: 2rem;
   padding: 1rem;
   background-color: #f0c040;
@@ -3899,10 +3900,9 @@ button[disabled]:hover {
 
 .navigation-bar {
   width: 100vw;
-  height: 100vmax;
   display: flex;
   justify-content: center;
-  position: absolute;
+  position: relative;
 }
 
 .navigation-bar-container {
@@ -3911,7 +3911,7 @@ button[disabled]:hover {
   border-radius: 0 0 0.5rem 0.5rem;
   box-shadow: 0px 0px 10px 3px #92929252;
   clip-path: inset(0px -50px -50px -50px);
-  position: sticky;
+  position: absolute;
   top: 0;
   z-index: 99;
   background-color: #fff;
@@ -4132,6 +4132,10 @@ button[disabled]:hover {
   align-items: center;
   height: 4.5rem;
   flex-wrap: wrap;
+}
+
+.animateNavBar {
+  position: fixed;
 }
 
 @media screen and (max-width: 700px) {
