--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -18,6 +18,7 @@
   font-family: "MuseoModerno", cursive;
   /*font-family: "Baloo Chettan 2", cursive;*/
   font-weight: 400;
+  caret-color: transparent;
 }
 
 html {
@@ -251,7 +252,6 @@ textarea {
   display: flex;
   flex-direction: column;
   align-items: center;
-  padding: 0.5rem 0;
 }
 
 .products-slider-container:first-of-type {
@@ -315,7 +315,7 @@ textarea {
   padding: 0;
   margin: 0.5rem 0.3rem;
   padding-bottom: 2rem;
-  background-color: #fff;
+  background-color: #ffffff;
   position: relative;
 }
 
@@ -1165,10 +1165,13 @@ input.checked[type="radio"] {
 
 .hero-banners {
   display: flex;
+  flex-direction: column;
   align-items: center;
-  padding: 2rem;
-  width: 100vw;
   background-color: #f9f9f9;
+  position: relative;
+  width: 100%;
+  border-radius: 0.1rem;
+  overflow: hidden;
 }
 
 .hero-banner-main {
@@ -1197,22 +1200,128 @@ input.checked[type="radio"] {
 
 .swiper-slide {
   text-align: center;
-  background: #fff;
+  background: #f9f9f9;
 }
 
 .hero-banner-submain {
-  display: flex;
-  flex-wrap: wrap;
-  height: 40rem;
-  border-radius: 5px;
-  width: 100%;
   align-content: space-between;
+  transition: max-height 0.5s;
+  overflow-x: auto;
+  overflow-y: hidden;
+  white-space: nowrap;
+  -webkit-overflow-scrolling: touch;
+  display: flex;
+  align-items: center;
+  transition: all 0.5s ease;
+  position: relative;
+  scroll-behavior: auto;
+}
+
+.hero-banner-submain::-webkit-scrollbar {
+  display: none;
+}
+
+.show-more-submain {
+  cursor: pointer;
+  display: flex;
+  align-items: center;
+  margin-top: 1rem;
+  color: #707070;
+  font-size: 1.3rem;
+}
+
+.show-more-submain * {
+  font-weight: 500;
+}
+
+.DoubleRightOutlined {
+  font-size: 1.2rem;
+  margin-left: 1rem;
+  transition: all 0.3s;
+  transform: rotate(90deg);
+}
+
+.slide-wrapper {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  cursor: pointer;
+}
+
+.slide-wrapper:hover > .hero-submain-img {
+  transform: translateY(-0.3rem);
 }
 
 .hero-submain-img {
-  width: inherit;
-  border-radius: inherit;
-  height: calc(50% - 0.5rem);
+  height: 100%;
+  transition: all 0.3s;
+}
+
+.slide-title {
+  align-items: center;
+  display: inline-block;
+  flex-wrap: nowrap;
+  white-space: nowrap;
+  overflow: hidden !important;
+  text-overflow: ellipsis;
+}
+
+.slide-title * {
+  margin-left: 1rem;
+}
+
+.left-chevron-wrap,
+.right-chevron-wrap {
+  position: absolute;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 2rem 0.5rem;
+  z-index: 1;
+  height: 8rem;
+  top: calc(50% - 4rem);
+  width: 4rem;
+  background-color: #00000040;
+  cursor: pointer;
+  transition: all 0.5s ease;
+  transition: background-color 0.3s ease;
+  /*box-shadow: 0px 0px 10px -5px #7c7c7c;
+  clip-path: inset(0px -5px -5px -5px);*/
+}
+
+/*.left-chevron-wrap:hover,
+.right-chevron-wrap:hover {
+  background-color: #00000060;
+}*/
+
+.left-chevron-wrap:hover * {
+  margin-right: 0.3rem;
+}
+.right-chevron-wrap:hover * {
+  margin-left: 0.3rem;
+}
+
+.left-chevron-wrap *,
+.right-chevron-wrap * {
+  font-size: 2.2rem;
+  color: #fff;
+  transition: all 0.2s ease;
+}
+
+.left-chevron-wrap {
+  left: 0;
+  border-radius: 0 0.5rem 0.5rem 0;
+  background-color: #ffffff70;
+}
+
+.right-chevron-wrap {
+  right: 0;
+  border-radius: 0.5rem 0 0 0.5rem;
+}
+
+.fixed-slides-wrapper {
+  position: relative;
 }
 
 @media screen and (max-width: 700px) {
@@ -1220,7 +1329,6 @@ input.checked[type="radio"] {
     flex-direction: column;
     justify-content: center;
     padding: 0;
-    width: 100vw;
   }
 
   .hero-banner-main {
@@ -1236,19 +1344,13 @@ input.checked[type="radio"] {
     max-height: 0.5rem;
   }
 
-  .hero-banner-submain {
+  /*.hero-banner-submain {
     flex-wrap: nowrap;
     width: 100%;
     height: 9rem;
     padding: 0 0.5rem;
     justify-content: space-between;
-  }
-
-  .hero-submain-img {
-    border-radius: 0.5rem;
-    width: calc(50% - 0.5rem);
-    height: inherit;
-  }
+  }*/
 }
 
 /* Form Note */
@@ -4310,18 +4412,22 @@ button[disabled]:hover {
   border-radius: 2rem;
 }
 
-.fish-title-border {
-  width: 100%;
+.fish-title-design {
   position: absolute;
+  width: 100%;
   top: 0;
+  z-index: 10;
+  flex-direction: column;
+}
+
+.fish-title-border {
   height: 2px;
+  border-radius: 3rem;
 }
 
 .fish-title-cont {
   position: absolute;
-  top: 0;
   left: 10rem;
-  z-index: 10;
   display: flex;
   justify-content: center;
   color: rgba(255, 255, 255, 0);
@@ -4362,10 +4468,10 @@ button[disabled]:hover {
   background-color: #fff;
   border: 1px solid #eeeeee;
   border-radius: 0.5rem;
-  margin: 0 0.2rem;
   position: relative;
   display: flex;
   flex-direction: column;
+  margin: 0 0.2rem;
 }
 
 .slide-ribbon-container img {
@@ -4406,6 +4512,7 @@ button[disabled]:hover {
 
   .slide-ribbon-container {
     border-radius: 0.3rem;
+    margin: 0;
   }
 
   .fish-title-cont {
@@ -4468,6 +4575,7 @@ button[disabled]:hover {
   white-space: nowrap;
   -webkit-overflow-scrolling: touch;
   display: flex;
+  grid-column-gap: 0.5rem;
   align-items: center;
   scroll-snap-type: x mandatory;
 }
@@ -4550,4 +4658,44 @@ button[disabled]:hover {
 .scroll-box__container {
   height: 100%;
   display: inline-flex;
+}
+
+/* Classic Title design */
+
+.classic-title-cont {
+  padding: 1rem;
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  width: inherit;
+  position: relative;
+  background-color: inherit;
+}
+
+.classic-title-border {
+  height: 2px;
+  background-color: #d3b25d;
+  width: 95%;
+  position: absolute;
+  top: calc(50% - 2px);
+}
+
+.classic-title {
+  font-size: 1.6rem;
+  z-index: 1;
+  background-color: inherit;
+  padding: 0 2rem;
+}
+
+@media screen and (max-width: 700px) {
+  .classic-title-cont {
+    padding: 0;
+  }
+  .classic-title-border {
+    width: 100%;
+  }
+  .classic-title {
+    font-size: 1.4rem;
+    padding: 0 1rem;
+  }
 }
