--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -18,22 +18,23 @@
   font-family: "MuseoModerno", cursive;
   /*font-family: "Baloo Chettan 2", cursive;*/
   font-weight: 400;
-  caret-color: transparent;
+  /*caret-color: transparent;*/
 }
 
 html {
   font-size: 62.5%;
   /*font-size: 65%;*/
-}
-
-select {
-  cursor: pointer;
+  scroll-behavior: smooth;
 }
 
 body {
   font: 1.6rem Helvetica;
   margin: 0;
   overflow-x: hidden;
+}
+
+select {
+  cursor: pointer;
 }
 
 body::-webkit-scrollbar {
@@ -286,24 +287,23 @@ textarea {
 .slider-container-show-all {
   font-size: 1.3rem;
   position: absolute;
-  right: 1rem;
-  top: 0rem;
-  color: #aaaaaa;
+  right: 0;
+  top: 0.5rem;
+  color: #707070;
   cursor: pointer;
-  padding: 0.3rem 0.8rem;
+  padding: 0 0.8rem;
   border-radius: 2rem;
   display: flex;
   align-items: center;
-  justify-content: space-between;
-  width: 9rem;
-  font-family: monospace;
 }
 
 .slider-container-show-all:hover {
   color: #d3b25d;
 }
+
 .faChevronRight {
   color: #d3b25d;
+  margin-left: 0.6rem;
 }
 
 .product {
@@ -340,8 +340,7 @@ textarea {
   .slider-container-show-all {
     font-size: 1.05rem;
     right: 0;
-    width: 8rem;
-    top: 0rem;
+    top: 0.5rem;
     /*border: 1px solid #d3b25d;*/
   }
 
@@ -1203,18 +1202,19 @@ input.checked[type="radio"] {
   background: #f9f9f9;
 }
 
-.hero-banner-submain {
-  align-content: space-between;
+.hero-banner-submain,
+.slideBox-wrapper {
   transition: max-height 0.5s;
-  overflow-x: auto;
-  overflow-y: hidden;
+  overflow: hidden;
   white-space: nowrap;
   -webkit-overflow-scrolling: touch;
   display: flex;
   align-items: center;
-  transition: all 0.5s ease;
+  transition: all 0.5s ease-in-out;
   position: relative;
   scroll-behavior: auto;
+  width: 100%;
+  height: 100%;
 }
 
 .hero-banner-submain::-webkit-scrollbar {
@@ -1230,15 +1230,52 @@ input.checked[type="radio"] {
   font-size: 1.3rem;
 }
 
+.showMore-wrapper {
+  cursor: pointer;
+  position: absolute;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  bottom: 0;
+  border-radius: 1.5rem 0 0 1.5rem;
+  background-color: #fff;
+  box-shadow: 0px 0px 10px 1px #d3b25d;
+  height: 3rem;
+  width: 3rem;
+  transform: rotate(90deg);
+  transition: all 0.2s ease-in-out;
+  background-color: #f9f9f9;
+}
+
+.showMore-wrapper * {
+  color: #d3b25d;
+  font-size: 2.2rem;
+  transition: all 0.1s ease;
+}
+
+.showMore-wrapper:hover > * {
+  margin-left: 0.4rem;
+}
+
+.chevron-wrapper {
+  display: flex;
+  align-items: flex-end;
+  justify-content: center;
+  transform: rotate(90deg);
+  margin-left: 0.7rem;
+}
+
+.chevron-wrapper * {
+  transition: all 0.5s ease-in-out;
+}
+
 .show-more-submain * {
   font-weight: 500;
 }
 
 .DoubleRightOutlined {
-  font-size: 1.2rem;
-  margin-left: 1rem;
+  font-size: 1.5rem;
   transition: all 0.3s;
-  transform: rotate(90deg);
 }
 
 .slide-wrapper {
@@ -1277,17 +1314,22 @@ input.checked[type="radio"] {
   display: flex;
   align-items: center;
   justify-content: center;
-  padding: 2rem 0.5rem;
   z-index: 1;
   height: 8rem;
-  top: calc(50% - 4rem);
   width: 4rem;
   background-color: #00000040;
   cursor: pointer;
   transition: all 0.5s ease;
   transition: background-color 0.3s ease;
-  /*box-shadow: 0px 0px 10px -5px #7c7c7c;
-  clip-path: inset(0px -5px -5px -5px);*/
+  box-shadow: 0px 0px 10px -5px #fff;
+  /*clip-path: inset(0px -5px -5px -5px);*/
+  border-radius: 0 0.5rem 0.5rem 0;
+}
+
+.last-slide {
+  width: 100%;
+  height: 10rem;
+  background-color: #d3b25d;
 }
 
 /*.left-chevron-wrap:hover,
@@ -1305,23 +1347,35 @@ input.checked[type="radio"] {
 .left-chevron-wrap *,
 .right-chevron-wrap * {
   font-size: 2.2rem;
-  color: #fff;
   transition: all 0.2s ease;
 }
 
 .left-chevron-wrap {
-  left: 0;
   border-radius: 0 0.5rem 0.5rem 0;
   background-color: #ffffff70;
+  display: none;
 }
 
 .right-chevron-wrap {
-  right: 0;
   border-radius: 0.5rem 0 0 0.5rem;
 }
 
 .fixed-slides-wrapper {
   position: relative;
+  width: 100%;
+  height: 100%;
+}
+
+.slides-overlay {
+  display: inline-block;
+}
+
+.flex-slides-wrapper {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 @media screen and (max-width: 700px) {
@@ -1331,19 +1385,6 @@ input.checked[type="radio"] {
     padding: 0;
   }
 
-  .hero-banner-main {
-    border-radius: 0;
-    height: 19rem;
-    width: 100vw;
-  }
-
-  .banner-margin {
-    min-width: 0.5rem;
-    max-width: 0.5rem;
-    min-height: 0.5rem;
-    max-height: 0.5rem;
-  }
-
   /*.hero-banner-submain {
     flex-wrap: nowrap;
     width: 100%;
@@ -1351,6 +1392,15 @@ input.checked[type="radio"] {
     padding: 0 0.5rem;
     justify-content: space-between;
   }*/
+
+  .showMore-wrapper {
+    height: 2.5rem;
+    width: 2.5rem;
+  }
+
+  .showMore-wrapper * {
+    font-size: 1.5rem;
+  }
 }
 
 /* Form Note */
